# halex

./: Cargo.toml  README.md  TODO.md  a  a.out  main  main.hlx
src/: args.rs  lower.rs  main.rs  parser.rs
src/compiler/: mir.rs  mod.rs  types.rs
src/lexer/: mod.rs
