[package]
name = "halex"
description="a mid level, simple, expressive and strongly typed programming language."
version = "0.1.0"
edition = "2021"

[dependencies]
miette = {version = "5.10.0", features = ["fancy"]}
logos = "0.13.0"
clap = { version = "4.4.12", features = ["derive"] }
cranelift = "0.103.0"
cranelift-object = "0.103.0"
cranelift-module = "0.103.0"
cranelift-native = "0.103.0"
