[package]
name = "halex"
description="a mid level, simple, expressive and strongly typed programming language."
version = "0.1.0"
edition = "2021"

[dependencies]
miette = {version = "5.10.0", features = ["fancy"]}
logos = "0.13.0"
clap = { version = "4.4.12", features = ["derive"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm16-0"], rev = "0b2cde9394320ab6f097ef10408d663a28d44be3" }
llvm-sys-150 = { package = "llvm-sys", version = "160", features = ["prefer-static"] }
